fixed products alignment

--- a/src/app/product/styles/product-list.css
+++ b/src/app/product/styles/product-list.css
@@ -20,6 +20,7 @@ ul {
     border-radius: 4px;
     -webkit-transition: border .2s ease-in-out;
     transition: border .2s ease-in-out;
+    height: 300px;
 }
 .thumbnail .caption{
     padding: 9px;
